Fixed event page horizontal scroll on mobile.

--- a/static/css/event.styl
+++ b/static/css/event.styl
@@ -132,7 +132,8 @@ a, a:hover
 
 
 .without-background
-    padding: 60px 0px
+    padding-top: 60px
+    padding-bottom: 60px
 
 #about
     .overlay
